--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2771,6 +2771,7 @@ a:hover {
     height: 56px;
     color: #f1f1f1;
     font-size: 14px;
+
 }
 
 .subscribe .input-group span {
@@ -2868,6 +2869,10 @@ a:hover {
 .comming-soon-icons li a:hover:before,
 .comming-soon-icons li a:hover:after {
     transform: scaleY(1.3);
+}
+
+.input-group-custom ::-webkit-input-placeholder {
+    color: #f1f1f1;
 }
 
 /****************************** comming soon view page css ends here ******************************/
